--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "graphql": "^16.6.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
