--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "classnames": "^2.3.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "graphql": "^16.6.0",
