--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "form-data": "^4.0.0",
     "graphql": "^16.6.0",
     "next": "13.0.5",
     "react": "18.2.0",
