--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.4.5", 
     "react-slideshow-image": "^4.0.5"
   },
   "devDependencies": {
