--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-slideshow-image": "^4.0.5"
+    "react-router-dom": "^6.4.5",
+    "react-slideshow-image": "^4.0.5",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
