--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "form-data": "^4.0.0",
     "graphql": "^16.6.0",
     "next": "13.0.5",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.4.5", 
+    "react-router-dom": "^6.4.5",
     "react-slideshow-image": "^4.0.5"
   },
   "devDependencies": {
