--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.1",
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
+    "cloudinary-react": "^1.8.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "form-data": "^4.0.0",
