--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "cloudinary-react": "^1.8.1",
     "eslint": "8.28.0",
